Fix sign in and sign out buttons to reflow on mobile.. final check-in  :)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+      padding-bottom: 20px;
 }
 
 a {
@@ -67,8 +68,19 @@ button {
 }
 .blah {
 	color: #ffffff;
+    margin-top: 0px;
 }
 
+#abcd {
+    vertical-align: middle;
+}
+.not-active {
+   pointer-events: none;
+   cursor: default;
+   color: #ffffff;
+   vertical-align: middle; 
+   font-size: 20px;
+}
 @media (max-width: 991px) {
     .navbar-header {
         float: none;
